--- a/src/client/resources/lynxmind.client.mixins.json
+++ b/src/client/resources/lynxmind.client.mixins.json
@@ -1,7 +1,7 @@
 {
   "required": true,
   "minVersion": "0.8",
-  "package": "org.ricey_yam.lynxmind.mixin.client",
+  "package": "org.ricey_yam.lynxmind.client.mixin",
   "compatibilityLevel": "JAVA_17",
   "client": [
   ],
@@ -10,5 +10,8 @@
   },
   "overwrites": {
     "requireAnnotations": true
-  }
+  },
+  "mixins": [
+    "ItemEntityMixin",
+  ]
 }
